# cosmos-3-h-surgical-simulator

./: .gitignore  README.md  index.html  pyproject.toml
.github/workflows/: pages.yml
configs/: cosmos3-super-webrtc.toml
docs/: index.md  run.md
src/flashdreams_cosmos3_h_surgical/: __init__.py  action.py  cli.py  config.py  endpoint.py  fd_compat.py  flashdreams_runner.py  io.py  keyboard.py  server.py
src/flashdreams_cosmos3_h_surgical/web/: index.html
src/flashdreams_cosmos3_h_surgical/web/static/css/: index.css
src/flashdreams_cosmos3_h_surgical/web/static/js/: index.js
static/css/: project.css
tests/: test_contracts.py
